--- a/app/src/main/res/values/content.xml
+++ b/app/src/main/res/values/content.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+<!--    privacy-->
     <string name="privacy">
         Treflor, (“Treflor”, “our”, “us” or “we”) are committed to protecting and respecting your privacy in connection with your use of our website, Treflor.com (the “Website(s)”), applications “Apps”) and other products, services and features thereof (the Website, the Apps and such other products, services and features are collectively referred to herein as the “Product” or “Products”, which may be updated from time-to-time at the sole discretion of Treflor). This privacy policy (“Privacy Policy”) and any other documents referred to herein set forth the basis on which any personal information we collect from you, or that you provide to us, in connection with the Products will be processed by us. Please read the following carefully to understand our practices regarding your personal information and how we will collect, use and disclose your personal information.
     </string>
@@ -97,8 +98,97 @@ All information you provide to us through the Products is stored on our secure s
     We may update this Privacy Policy to reflect changes to our information practices. If we make any material changes we will notify you by in-Product message, email (sent to the e-mail address specified in your account) or by means of a notice in the Products prior to the change becoming effective. We encourage you to periodically review this page for the latest information on our privacy practices.
     </string>
 
+<!--    about-->
     <string name="about">
         Treflor helps people explore the outdoors with the largest collection of detailed, hand-curated journey maps as well as journey reviews and photos crowdsourced from a community of in specially Sri Lanka."\n"
         Treflor has built the most complete, accurate dataset for off-road recreation ever, along with the easiest-to-use product suite that helps users find, customize, record and share outdoor activities and the largest and most active digital community of outdoor enthusiasts.
+    </string>
+
+    <!--    tos-->
+    <string name="products">
+        These Terms and Conditions (these “Terms”) contain the terms and conditions on which we supply content, products or services listed on www.Treflor.com (the “Website”), through our applications (the “Apps”) or via other delivery methods to you (the Website and such content, products, services and the Apps are collectively referred to herein as the “Product” or “Products”, which may be updated from time-to-time at the sole discretion of Treflor). Please read these terms and conditions, carefully before ordering any Products from the Website or third party App stores (e.g. the Apple App Store, the Android Play Store, Amazon, etc.). The terms “Treflor,” “us” or “we” refers to Treflor, The term “Device” refers to the device which is used to access the Products including but not limited to computers, smart phones and tablets. The term “you” refers to the user of the Products. When you order (“Order”) any Products, or otherwise use or access the Products, you agree to be bound by these Terms and all applicable laws, rules and regulations. By using the Products, you indicate that you accept these Terms and that you agree to abide by them. If you do not agree to these Terms, please refrain from using the Products."\n"
+
+Our contact email address is support@treflor.com. All correspondence to Treflor including any queries you may have regarding your use of the Products or these Terms should be sent to this contact email address.
+    </string>
+    <string name="basis_of_license">
+
+    These Terms and the Order set out the whole agreement between you and us for the supply of the Products. In order to participate in certain Products, you may be required to agree to additional terms and conditions; those additional terms are hereby incorporated into these Terms. Where such terms are inconsistent with these Terms, the additional terms shall control."\n"
+    Please check that the details in these Terms and on the Order are complete and accurate before you use or commit yourself to purchase the Products. If you think that there is a mistake, please make sure that you ask us to confirm any changes in writing, as we only accept responsibility for statements and representations made in writing by an officer of Treflor."\n"
+    AS PART OF YOUR USE OF THE PRODUCTS, YOU AFFIRMATIVELY CONSENT TO THE PROCESSING AND STORAGE OF YOUR PERSONAL INFORMATION IN THE UNITED STATES INCLUDING THE PROCESSING AND STORING OF YOUR PERSONAL INFORMATION IN THE UNITED STATES FOR THE PURPOSES OF PROCESSING PAYMENTS AND TRACKING INDIVIDUAL USE OF THE PRODUCTS. BY USING THE PRODUCTS, YOU ACKNOWLEDGE THAT YOU UNDERSTAND AND AGREE THAT THE UNITED STATES MAY NOT HAVE THE SAME LEVEL OF PROTECTIONS FOR YOUR PERSONAL INFORMATION THAT EXIST IN YOUR COUNTRY OF RESIDENCE, AND YOU NONETHELESS CONSENT TO THE PROCESSING AND STORAGE OF YOUR PERSONAL INFORMATION IN THE UNITED STATES. WE WILL TAKE MEASURES AS REQUIRED TO COMPLY WITH APPLICABLE LAW REGARDING THE TRANSFER, STORAGE AND USE OF CERTAIN PERSONAL INFORMATION.
+
+    </string>
+
+    <string name="changes_to_terms">
+        Treflor reserves the right to change or update these Terms, or any other of our policies or practices, at any time, and will notify users by posting such changed or updated Terms on this page. Any changes or updates will be effective immediately upon posting to www.Treflor.com. Your continued use of the Products constitutes your agreement to abide by the Terms as changed. Under certain circumstances we may also elect to notify you of changes or updates to our Terms by additional means, such as email.
+    </string>
+
+    <string name="become_a_member">
+    You may sign up as a registered user of the Products free of charge (a “Member”). To become a Member you need to go to the relevant section of the Products, then submit your email address to us, and create a password to be used in conjunction with that email address. You are responsible for maintaining the confidentiality of your account and password and for restricting access to your Device."\n"
+    In the course of your use of the Products, you may provide certain personalized information to us (such information is referred to hereinafter as “User Information”). This User Information may include information from your Facebook and similar social networking profiles. Our information collection and use policies with respect to the privacy of such User Information are set forth in the Treflor Privacy Policy. You acknowledge and agree that you are solely responsible for the accuracy and content of User Information, and you agree to keep it up to date."\n"
+    By placing an Order through the Products, you warrant that:"\n"
+        You are legally capable of entering into binding contracts."\n"
+        All registration information you submit is truthful and accurate."\n"
+        You will maintain the accuracy of such information."\n"
+        Your use of the Products does not violate any applicable law or regulation.
+
+    </string>
+
+    <string name="user_info">
+        You are responsible for maintaining the confidentiality of your account, password and other User Information and for restricting access to your Device to further help protect such information. You are responsible for updating your User Information.
+    </string>
+
+    <string name="device_requirements">
+        To enjoy Treflor via your smartphone or other Device, your Device must satisfy certain system requirements. These requirements can be found on the Website and the Google, Apple and Amazon App marketplaces.
+    </string>
+
+    <string name="cancel_by_you">
+
+    You may cancel the auto-renewal of your Treflor subscription that you purchased on the Website in your account settings or by emailing support@Treflor.com."\n"
+    Please note that if you purchase a subscription through the Apple iTunes Store or our iPhone application, you may cancel your subscription by cancelling automatic renewal of paid In App Subscriptions by selecting Manage App Subscriptions in your iTunes Account settings and selecting the subscription you want to modify. If you purchase a subscription through the Google Play store you may cancel automatic renewals in account settings under Subscriptions in the Google Play app, or according to the current process outlined by Google Play.
+
+    </string>
+
+    <string name="cancel_by_us">
+        We may suspend or terminate your use of the Products as a result of your fraud or breach of any obligation under these Terms. Such termination or suspension may be immediate and without notice. A breach of these Terms, includes without limitation, the unauthorized copying or download of our trail content from the Products.
+    </string>
+
+    <string name="prohibited_use">
+         You agree not to upload, post, email or otherwise send or transmit or introduce any material that contains software viruses or any other computer code, files or programs designed to interrupt, harm, damage, destroy or limit the functionality of any computer software or hardware or equipment linked directly or indirectly with the Products or the Products themselves. You agree not to interfere with the servers or networks underlying or connected to the Products or to violate any of the procedures, policies or regulations of networks connected to the Products. You may not access the Products in an unauthorized manner."\n"
+
+You agree not to impersonate any other person while using the Products, conduct yourself in an offensive manner while using the Products, or use the Products for any illegal, immoral or harmful purpose."\n"
+
+By breaching the provisions of this section, you may commit a criminal offense under applicable laws. We may report any such breach to the relevant law enforcement authorities and we may cooperate with those authorities by disclosing your identity to them. In the event of such a breach, your right to use the Products will cease immediately.
+    </string>
+
+    <string name="copyright">
+
+    All materials (including software and content whether downloaded or not) contained in the Products are owned by Treflor (or our affiliates and/or third party licensors, where applicable), unless indicated otherwise. You agree and acknowledge that the materials are valuable property and that other than any specific and limited license for use of such materials, you shall not acquire any ownership rights in or to such materials. The materials may not be used except as provided for in these Terms, and any other relevant terms and conditions provided to you without our prior written permission."\n"
+    You acknowledge and agree that certain materials on or in the Products are the property of third party licensors and, without prejudice to any and all other rights and remedies available, each such licensor has the right to directly enforce relevant provisions of section 12 against you."\n"
+    The Products are not intended for your commercial use. Commercial advertisements, affiliate links, and other forms of solicitation may be removed by us without notice and may result in termination of privileges. You must not use any part of the materials used in or on the Products for commercial purposes without obtaining a written license to do so from us. Material from the Products may not be copied or distributed, or republished, or transmitted in any way, without our prior written consent. Any unauthorized use or violation of these Terms immediately and automatically terminates your right to use the Products and may subject you to legal liability. You agree not to use the Products for illegal purposes (including, without limitation, unlawful, harassing, libelous, invasion of another’s privacy, abusive, threatening or obscene purposes) and you agree that you will comply with all laws, rules and regulations related to your use of the Products. Appropriate legal action may be taken for any illegal or unauthorized use of the Products."\n"
+    A limited amount of content may be marked and authorized for the user to share in their personal social channels (Facebook, Twitter, etc.). With respect to content made available by Treflor through the Products that is specifically identified as available for distribution by you (“Distribution Content”) as part of your blog or other online commentary, analysis or review (“User Commentary”), Treflor grants you a limited right to download, reproduce and distribute Distribution Content over the internet as part of your User Commentary. You may also modify such Distribution Content but only as required to technically enable the display and distribution of such content through your computer systems and over the Internet (e.g. a change in video format or file size) provided such modification does not materially alter the substance or quality of such content. Your display and distribution of Distribution Content may also be subject to other terms and conditions that are set forth in the description of such content in the Products, such as display and distribution of Distribution Content only within specified usage dates. You agree not to publish the Distribution Content with other content that is known by you to be false, inaccurate, or misleading or that is, or that encourages activity or conduct that is, unlawful, harmful, threatening, abusive, harassing, tortious, defamatory, vulgar, obscene, pornographic, libelous, invasive of another’s privacy, hateful, or racially, ethnically or otherwise objectionable. Distribution Content may contain trackers that enable us to collect information with respect to the distribution and consumption of such content."\n"
+    You may not otherwise download, display, copy, reproduce, distribute, modify, perform, transfer, create derivative works from, sell or otherwise exploit any content, code, data or materials in the Products. If you make other use of the Products, or the content, code, data or materials thereon, except as otherwise provided above, you may violate copyright and other laws of the United States, other countries, as well as applicable state laws and may be subject to liability for such unauthorized use. Treflor will enforce its intellectual property rights to the fullest extent of the law, including the seeking of criminal prosecution.
+
+    </string>
+
+    <string name="trademark">
+        Treflor®, the Treflor logo and all other Treflor product or service marks are trademarks of Treflor. All intellectual property, other trademarks, logos, images, product and company names displayed or referred to on or in the Products are the property of their respective owners. Nothing grants you any license or right to use, alter or remove or copy such material. Your misuse of the trademarks displayed on the Products is strictly prohibited. Treflor will enforce its trademark rights to the fullest extent of the law, including the seeking of criminal prosecution.
+    </string>
+
+    <string name="end_user_license">
+        Subject to the terms of this license agreement (“License Agreement”), as set out in this section 11, and these other Terms, and your payment of applicable subscription fees, Treflor grants you a limited, non-exclusive, revocable license to stream, download and make personal non-commercial use of the Products."\n"
+
+The Products contain or embody copyrighted material, proprietary material or other intellectual property of Treflor or its licensors. All right, title and ownership in the Products remain with Treflor or its licensors, as applicable. The rights to download and use the Products are licensed to you and are not being sold to you, and you have no rights in them other than to use them in accordance with this License Agreement and our other Terms."\n"
+
+You agree that you will not and you will not assist or permit any third party to:"\n"
+
+    Copy, store, reproduce, transmit, modify, alter, reverse-engineer, emulate, de-compile, or disassemble the Products in any way, or create derivative works of the Products;"\n"
+    Use the Products or any part of them to create any tool or software product that can be used to create software applications of any nature whatsoever;"\n"
+    Rent, lease, loan, make available to the public, sell or distribute the Products in whole or in part;"\n"
+    Tamper with the Products or circumvent any technology used by Treflor or its licensors to protect any content accessible through the Products;"\n"
+    Circumvent any territorial restrictions applied to the Products; or"\n"
+    Use the Products in a way that violates this License Agreement or the other Terms."\n"
+    Use the Products for any commercial purpose without the express written consent of Treflor."\n"
+
+You may not make the Products available to the public. The Products made available (in whole or in part) are owned by Treflor or its licensors and your use of them must be in accordance with these Terms.
     </string>
 </resources>
