--- a/app/src/main/res/layout/fragment_about_app.xml
+++ b/app/src/main/res/layout/fragment_about_app.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.settings.about.AboutAppFragment">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/about_toolbar"
+        android:id="@+id/toolbar5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="?attr/actionBarSize"
