--- a/app/src/main/res/layout/fragment_privacy_policy.xml
+++ b/app/src/main/res/layout/fragment_privacy_policy.xml
@@ -12,7 +12,7 @@
         android:orientation="vertical">
 
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
+            android:id="@+id/toolbar5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minHeight="?attr/actionBarSize"
