--- a/app/src/main/res/layout/general_settings_fragment.xml
+++ b/app/src/main/res/layout/general_settings_fragment.xml
@@ -1,111 +1,122 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.settings.general.GeneralSettingsFragment">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar3"
+    <data>
+
+        <variable
+            name="user"
+            type="com.treflor.models.User" />
+    </data>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        app:title="Edit profile details"
-        app:titleTextColor="@color/colorPrimary" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <RelativeLayout
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="@dimen/ef_margin_small">
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="?attr/actionBarTheme"
+            app:title="Edit profile details"
+            app:titleTextColor="@color/colorPrimary" />
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/img_profile_picture"
+        <RelativeLayout
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:layout_gravity="center_horizontal"
-            android:paddingBottom="20dp"
-            android:src="@drawable/profile_pic" />
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="@dimen/ef_margin_small">
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/img_edit_btn"
-            android:layout_width="wrap_content"
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/img_profile_picture"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_gravity="center_horizontal"
+                android:paddingBottom="20dp"
+                android:src="@drawable/profile_pic" />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/img_edit_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginEnd="@dimen/ef_margin_medium"
+                android:layout_marginBottom="@dimen/ef_margin_medium"
+                android:alpha="0.9"
+                android:clickable="false"
+                android:src="@drawable/ic_edit_white_24dp"
+                app:backgroundTint="@color/colorButton"
+                app:elevation="6dp"
+                app:fabCustomSize="35dp"
+                app:fabSize="mini"
+                app:maxImageSize="20dp"
+                app:tint="@color/colorWhite" />
+
+        </RelativeLayout>
+
+        <EditText
+            android:id="@+id/ed_first_name"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="5dp"
+            android:fontFamily="@font/roboto"
+            android:hint="First Name"
+            android:inputType="text"
+            android:textColor="@color/textColor"
+            android:textSize="16sp" />
+
+        <EditText
+            android:id="@+id/ed_last_name"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="5dp"
+            android:fontFamily="@font/roboto"
+            android:hint="Last Name"
+            android:inputType="text"
+            android:textColor="@color/textColor"
+            android:textSize="16sp" />
+
+        <EditText
+            android:id="@+id/ed_email"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="5dp"
+            android:fontFamily="@font/roboto"
+            android:hint="Email"
+            android:inputType="text"
+            android:textColor="@color/textColor"
+            android:textSize="16sp" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginEnd="@dimen/ef_margin_medium"
-            android:layout_marginBottom="@dimen/ef_margin_medium"
-            android:alpha="0.9"
-            android:clickable="false"
-            android:src="@drawable/ic_edit_white_24dp"
+            android:layout_gravity="right|end"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/btn1"
+            android:fontFamily="@font/roboto_medium"
+            android:text="Save Changes"
+            android:textSize="14sp"
             app:backgroundTint="@color/colorButton"
-            app:elevation="6dp"
-            app:fabCustomSize="35dp"
-            app:fabSize="mini"
-            app:maxImageSize="20dp"
-            app:tint="@color/colorWhite" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
-    </RelativeLayout>
+    </LinearLayout>
 
-    <EditText
-        android:id="@+id/ed_first_name"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="5dp"
-        android:fontFamily="@font/roboto"
-        android:hint="Given Name"
-        android:inputType="text"
-        android:textColor="@color/textColor"
-        android:textSize="16sp" />
-
-    <EditText
-        android:id="@+id/ed_last_name"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="5dp"
-        android:fontFamily="@font/roboto"
-        android:hint="Family Name"
-        android:inputType="text"
-        android:textColor="@color/textColor"
-        android:textSize="16sp" />
-
-    <EditText
-        android:id="@+id/ed_email"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="5dp"
-        android:fontFamily="@font/roboto"
-        android:hint="Email"
-        android:inputType="text"
-        android:textColor="@color/textColor"
-        android:textSize="16sp" />
-
-    <Button
-        android:id="@+id/edit_profile_button"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right|end"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="20dp"
-        android:background="@drawable/btn1"
-        android:fontFamily="@font/roboto_medium"
-        android:text="Save Changes"
-        android:textSize="14sp"
-        app:backgroundTint="@color/colorButton"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-</LinearLayout>
+</layout>
